Membuat tag <p> untuk percobaan merge branch

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h2>Membuat file project baru</h2>
     <p>Ini adalah git project pertamaku dengan membuat file baru</p>
     
+    <p>Ini adalah percobaan merge branch</p>
 </body>
 </html>
